@@ -1,7 +1,7 @@
 ## Interface: 70300
 ## Title: [Lib] IGAS
 ## Author: kurapica.igas@gmail.com
-## Version: v148
+## Version: v149
 ## Notes: In-game addon system
 ## URL: http://github.com/kurapica/IGAS
 ## Dependencies: PLoop
