@@ -1,3 +1,6 @@
+2017/09/02 v149
+    1. Add support for summon random pet spell.
+
 2017/08/29 v147
     1. ADD UNIT_HEALTH for IFHealthFrequent.
 
